# resa-v3

./: .gitignore  E2_Main_Analysis.py  E2_Main_Analysis_Regen.py  README.md  pyproject.toml
.github/workflows/: ci.yml
campaigns/: ci_golden.yaml
campaigns/E2-1A/: e2_1a.yaml
campaigns/EX15-1A/: ex15_regen.yaml
campaigns/e2_c1/: e2.yaml  e2_regen.yaml
configs/ci/: e2_c1_asbuilt.yaml  e2_c1_design.yaml  e2_c1_design_regen.yaml  e2_c1_hf02.yaml  ex15_design.yaml
configs/shared/: chamber_e2.yaml  chamber_ex15.yaml  cooling_e2_c1.yaml  cooling_ex15.yaml  prop_h2_gox.yaml  prop_n2o_ethanol.yaml
docs/: CONFIGURATION.md  STUDIO.md
frontend/public/: app.js  config-editor.js  index.html  regen-design.js  regen-editor.js  studio-p2.js  styles.css  workspace-preview.js
resa/: __main__.py  campaign.py  pipeline.py  results.py
resa/config/: loader.py  schema.py
resa/models/: contour.py  gasdynamics.py  offdesign.py  thrust_chamber.py
resa/properties/: combustion.py  fluids.py
resa/regen/: __init__.py  integration.py
resa/regen_channels/: __init__.py  config.py  contour.py  coolant.py  correlations.py  diff.py  export.py  hotgas.py  layout.py  mesh.py  profiles.py  run.py  solver.py  viz.py
resa/reporting/: diff.py  pdf_plots.py  pdf_report.py  plots.py  report.py
resa_studio/: __init__.py  __main__.py  settings.py
scripts/: diagnose_regen_energy.py
tests/: test_campaign.py  test_channel_export.py  test_config_loader.py  test_pdf_report.py  test_regen_channels.py  test_regen_integration.py  test_regen_sync.py  test_step_export.py  test_studio_api.py
(+48 files in other folders)
